; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_frame_decref.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-source.c_obs_source_frame_decref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_source_frame = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.obs_source_frame*)* @obs_source_frame_decref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @obs_source_frame_decref(%struct.obs_source_frame* %0) #0 {
  %2 = alloca %struct.obs_source_frame*, align 8
  store %struct.obs_source_frame* %0, %struct.obs_source_frame** %2, align 8
  %3 = load %struct.obs_source_frame*, %struct.obs_source_frame** %2, align 8
  %4 = getelementptr inbounds %struct.obs_source_frame, %struct.obs_source_frame* %3, i32 0, i32 0
  %5 = call i64 @os_atomic_dec_long(i32* %4)
  %6 = icmp eq i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.obs_source_frame*, %struct.obs_source_frame** %2, align 8
  %9 = call i32 @obs_source_frame_destroy(%struct.obs_source_frame* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i64 @os_atomic_dec_long(i32*) #1

declare dso_local i32 @obs_source_frame_destroy(%struct.obs_source_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
